ingress/gateway.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    name: istio-gateway-prod
    namespace: prod
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - demo.elastisys.com
      port:
        name: http
        number: 80
        protocol: HTTP
kind: List
